src/test/ui/generic-associated-types/impl_bounds.stderr
error: `impl` associated type signature for `A` doesn't match `trait` associated type signature
  --> $DIR/impl_bounds.rs:15:5
   |
LL |     type A<'a> where Self: 'a;
   |     -------------------------- expected
...
LL |     type A<'a> where Self: 'static = (&'a ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found

error: `impl` associated type signature for `B` doesn't match `trait` associated type signature
  --> $DIR/impl_bounds.rs:17:5
   |
LL |     type B<'a, 'b> where 'a: 'b;
   |     ---------------------------- expected
...
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found

error[E0478]: lifetime bound not satisfied
  --> $DIR/impl_bounds.rs:17:5
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/impl_bounds.rs:17:12
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |            ^^
note: but lifetime parameter must outlive the lifetime `'b` as defined here
  --> $DIR/impl_bounds.rs:17:16
   |
LL |     type B<'a, 'b> where 'b: 'a = (&'a(), &'b ());
   |                ^^

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:20:5
   |
LL |     type C where Self: Copy = String;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
  --> $DIR/impl_bounds.rs:11:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^
note: the requirement `Fooy<T>: Copy` appears on the associated impl type `C` but not on the corresponding associated trait type
  --> $DIR/impl_bounds.rs:7:5
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     type C where Self: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ this trait associated type doesn't have the requirement `Fooy<T>: Copy`
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       +++++++++++++++++++

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/impl_bounds.rs:22:24
   |
LL |     fn d() where Self: Copy {}
   |                        ^^^^ the trait `Copy` is not implemented for `T`
   |
note: required because of the requirements on the impl of `Copy` for `Fooy<T>`
  --> $DIR/impl_bounds.rs:11:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^
note: the requirement `Fooy<T>: Copy` appears on the impl method `d` but not on the corresponding trait method
  --> $DIR/impl_bounds.rs:8:8
   |
LL | trait Foo {
   |       --- in this trait
...
LL |     fn d() where Self: Clone;
   |        ^ this trait method doesn't have the requirement `Fooy<T>: Copy`
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
LL | impl<T: std::marker::Copy> Foo for Fooy<T> {
   |       +++++++++++++++++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0478.
For more information about an error, try `rustc --explain E0277`.
